@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-04-16 12:04:55 kurasige Exp $
+$Id: History,v 1.3 1999-04-23 04:42:43 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+23th April 1999 H.Kurashige
+- Remove ConstructHad and ConstructLeptHad in ExN05PhysicsList
+
 16th April 1999 H.Kurashige
 - modify ExN05RunAction  ExN05SteppingAction ExN05TrackingAction
 - modify ExN05PhysicsList::SetCuts
